<resources>
    <string name="app_name">Eloquent</string>
    <string name="home_nav_title">Home</string>
    <string name="recorder_nav_title">Recorder</string>
    <string name="account_nav_title">Account</string>
    <string-array name="sort_by_options_array">
        <item>Alphabetical</item>
        <item>Date</item>
        <item>Length</item>
    </string-array>

    <string name="login">LOGIN</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempus est et vehicula gravida.</string>
    <string name="email_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_now"><u>Register now</u></string>
    <string name="login_to_my_account">LOGIN TO MY ACCOUNT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_now_btn">REGISTER NOW</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_link"><u>Login</u></string>
    <string name="or">OR</string>
    <string name="google_logo">Google Logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="sort_by">Sort by:</string>
    <string name="feedback_title">Your recording</string>
    <string name="player_tagsHint">Tags</string>
    <string name="player_titleHint">Title</string>
    <string name="player_title">Play recording</string>
    <string name="recorder_title">Start recording</string>
    <string name="recorder_arrowRight">Arrow right</string>
    <string name="recorder_pauseResume">Pause Resume</string>
    <string name="recorder_startStop">Start Stop</string>
    <string name="player_playPause">Play Pause</string>
    <string name="player_analyze">Analyze</string>
    <string name="listItem_soundWave">Sound wave</string>
    <string name="home_filter">filter</string>
    <string name="feedback_titleLabel">Title</string>
    <string name="feedback_tagsLabel">Tags</string>
    <string name="feedback_lengthLabel">Length</string>
    <string name="feedback_dateLabel">Date</string>
    <string name="feedback_urlLabel">Words per Minute</string>
    <string name="analyze">Analyze</string>
</resources>
